# naif

./: .Rprofile  .gitignore  .lycheerc.toml  .nojekyll  .pre-commit-config.yaml  .prettierignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-CCBY.md  README.md  SECURITY.md  TODO.md  _brand.yml  _quarto-docx.yml  _quarto-fork.yml.example  _quarto.yml  _quarto.yml.local  _quarto.yml.local.example  about.html  about.qmd  blog.html  blog.qmd  blog.xml  cliff.toml  contact.html  contact.qmd  custom.scss  disclaimer.html  disclaimer.qmd  docs.html  docs.qmd  index.html  index.qmd  join.html  join.qmd  listings.json  llms.qmd  (+14 more)
.devcontainer/: devcontainer.json
.github/: _quarto.yml  pull_request_template.md
blog/: index.html  index.qmd  index.xml
dashboard/: hei.csv  index.qmd
dashboard-tobi/: index.qmd
dashboards/: _common.py  _matomo_usage.py  dashboard-common.css  data-changelog.qmd  index.html  index.qmd
events/: index.html  index.qmd  index.xml
includes/: get-involved.html  listing-category-filters.html
mentions/: index.qmd  items.yml
monitor/: index.qmd
news/: index.html
partials/: title-block.html
poster/: custom.css  poster.html  poster.qmd
posters/: index.html  index.qmd
posts/: _metadata.yml  blog.html  index.html  index.qmd  index.xml
scripts/: cross_check_hei.py  cross_check_hei_checks.py  cross_check_hei_common.py  cross_check_hei_report.py  fetch_matomo_usage.py  release_site_archive.py  screenshot-clean.mjs
tests/: test_common.py  test_cross_check_hei.py  test_dashboard_data.py  (+1 more)
(+205 files in other folders)
