[project]
name = "naif"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "itables>=2.6.2",
    "jupyter>=1.1.1",
    "kaleido>=1.2.0",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "pyyaml>=6.0.3",
]
